fixed sign up page error message colors and spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,31 @@
 @import "tailwindcss";
 
 @theme {
-   --color-dark-1:  #000000; 
-   --color-dark-2:  #09090a; 
-   --color-dark-3:  #101012; 
-   --color-dark-4:  #1f1f22; 
-   --color-purple-primary: #5d5fef; 
-   --color-blue-primary: #4076dbea;
-   --color-cream: #FFFDD0;
-   --color-mypurple: #4e4197ea;
-   --color-myred: #8d1313ea;
-   
+  --color-dark-1: #000000;
+  --color-dark-2: #09090a;
+  --color-dark-3: #101012;
+  --color-dark-4: #1f1f22;
+  --color-purple-primary: #5d5fef;
+  --color-blue-primary: #4076dbea;
+  --color-cream: #fffdd0;
+  --color-mypurple: #4e4197ea;
+  --color-myred: #8d1313ea;
 }
+
+/* fixing issue with autofill background turning white*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #1a1a1a inset !important;
+  -webkit-text-fill-color: #e5e7eb !important;
+  caret-color: #e5e7eb;
+}
+
+/* targeting the ones with dark-3 background only, extra safe but don't really need
+input.bg-dark-3:-webkit-autofill,
+input.bg-dark-3:-webkit-autofill:hover,
+input.bg-dark-3:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0 30px #1a1a1a inset !important;
+  -webkit-text-fill-color: #e5e7eb !important;
+} */
